--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/breeze": "*",
         "laravel/framework": "^9.0",
+        "laravel/passport": "^11.10",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7"
     },
@@ -57,7 +58,10 @@
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "minimum-stability": "dev",
     "prefer-stable": true
